--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,10 @@
-authors = ["actdeonovic <benjamin.deonovic@act.org>"]
 name = "GramCharlierSeries"
 uuid = "3b8cde00-cb2b-11e8-15d5-23a97614d946"
+authors = ["actdeonovic <benjamin.deonovic@act.org>"]
 version = "0.1.0"
 
 [deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
